Modify Form, Modal, Notify, Confirm and Error

--- a/src/components/entity/module/ModuleCard.scss
+++ b/src/components/entity/module/ModuleCard.scss
@@ -1,4 +1,15 @@
 div.moduleCard {
-  width: 250px;
-  height: 300px;
+  // Appearance
+  width: 270px;
+  height: 310px;
+
+  div.moduleInfo {
+    // Appearance
+    margin-bottom: 20px;
+
+    img {
+      // Appearance
+      height: 150px;
+    }
+  }
 }
